import "client.comm.proto";
package client;

// 在线天数通过 role_statis_info.type(19) 获取
// 在线天数奖励记录通过 role_statis_info.type(20) 获取

// 周累计时长通过 role_statis_info.type(21) 获取
// 上周周累计时长通过 role_statis_info.type(22) 获取 
// 上周奖励是否领取 role_statis_info.type(26)

// 闭关潜修时间通过 role_statis_info.type(23) 获取

// 总充值数 role_statis_info.type(5) 获取
// 礼包领取情况 role_statis_info.type(24) 获取

// 黄钻领取情况 每天和年费每天在  role_statis_info.type(12)
// 黄钻其他永乐一次性限制在 role_statis_info.type(25)

// 登陆奖励
message welfare_online_req {
    optional uint32      day      = 1;    // 领取在线天数奖励 指定天数
    optional bool        week     = 2;    // 领取上周奖励     填true
    optional bool        sod      = 3;    // 潜修奖励         false 为单倍 true 双倍
    optional server_head svr_head = 1000;
}

message welfare_online_rsp {
    optional uint32 day  = 1;  
    optional bool   week = 2;  
    optional bool   sod  = 3;  
    required uint32 ret  = 4;  // 0 成功 1 领取过 2 天数不足 3 闭关符不够
}

// 礼包交换和充值大礼
message welfare_gifts_req {
    // 礼包兑换
    optional bool        first_0     = 1;    // 礼包兑换里的首充
    optional string      novice_code = 2;    // 新手卡
    optional string      spread_code = 3;    // 推广
    // 充值大礼
    optional uint32      pack_type   = 4;    // 顺序索引从0开始
    optional server_head svr_head    = 1000;
}

message welfare_gifts_rsp {
    // 礼包兑换
    optional bool        first_0     = 1;    // 礼包兑换里的首充
    optional string      novice_code = 2;    // 新手卡
    optional string      spread_code = 3;    // 推广
    // 充值大礼
    optional uint32      pack_type   = 4;    // 顺序索引从0开始

    required uint32      ret         = 5;    // 0 成功 1 领取过 2 卡号错误 3 充值数不够
}

// 黄钻礼包
message welfare_yellow_vip_req {
    optional uint32      every_day     = 1;  // 每日礼包
    optional uint32      grow_up       = 2;  // 成长 发每个成长索引从0开始
    optional bool        ever_day_year = 3;  // 年费每日礼包
    optional bool        novice        = 4;  // 新手礼包
    optional server_head svr_head      = 1000;
}

message welfare_yellow_vip_rsp {
    optional uint32 every_day     = 1;
    optional uint32 grow_up       = 2;
    optional bool   ever_day_year = 3;
    optional bool   novice        = 4;
    required uint32 ret           = 5; // 0 成功 1 领取过 2 权限错误
}

//PRSTE_ONLINE_GIFTS_RECORD   = 27,  // 在线礼包领取记录 右起第一位1分钟 二 5分钟....
//PRSTE_ONLINE_GIFTS_TIME     = 28,  // 在线礼包时间秒数

// 在线礼包
message online_gifts_req {
    required uint32      online_time = 1;    // 领取哪个礼包
    optional server_head svr_head    = 1000;
}

message online_gifts_rsp {
    required uint32 online_time = 1; // 领取哪个礼包
    required uint32 ret         = 2; // 0 成功 1 领取过 2 还没到点
}

// 领取奖励
message get_gifts_req {
    required uint32      reward_id = 1;
    optional server_head svr_head  = 1000;
}

message get_gifts_rsp {
    required uint32 reward_id = 1;
    required uint32 ret       = 2; // 0 成功 1 失败   
}